# university-labs

./: .gitignore
Second/2-1/ASM/Lab_5/: report.docx
Second/2-1/OOP/CourseWork/bases/: test.csv
Second/2-1/OOP/CourseWork/course/: RailwayCarriage.h  ShowAllRecordsCode.h  Vector.h  resources.qrc
Second/2-1/OOP/Lab5/: Rational.h  main  makefile  report.docx
Second/2-2/: report1.docx
Second/2-2/ASD/.Archives/Lab2/: main.py  report2.docx  search_results.csv
Second/2-2/ASD/.Archives/Lab2*/: main.py  report2.docx  search_results.xlsx
Second/2-2/ASD/Lab1/: report1.docx  selection_sorted.txt  sort  sort.cpp  sorting_results.csv
Second/2-2/ASD/Lab1/misc/: steps.xlsx
Second/2-2/ASD/Lab2/: .~lock.graphics.xlsx#  graphics.xlsx  lab2.docx  report2.docx
Second/2-2/ASD/Lab3/: graphics.xlsx  main  main.cpp  report3.docx
Second/2-2/ASD/Lab4/: graphics.xlsx  main.cpp  report4.docx
Second/2-2/ASD/Lab5/: graphics.xlsx  main.cpp  report5.docx
Second/2-2/ASM/: L3T3.s
Second/2-2/ASM/Lab1/: report1.docx
Second/2-2/DA/: Lab1.py
Second/2-2/OMM/Lab1/: main.py  result8.txt
Second/2-2/OMM/Lab3/: pyproject.toml  results_lab3.txt
Second/2-2/OMM/Lab3/lab3/: pyproject.toml
Second/2-2/OMM/Lab4/: Lab4.m  main.py  network_analysis_results.txt
Second/2-2/OMM/Lab5/: lab5.m  main.py  results.txt
Second/2-2/OMM/Prac2/: 1.py  11.py  2.py  3.py  mat.py
Second/ASD/Lab1/: insertion_sorted.txt  numbers.txt  report1.docx  sort.cpp  sorting_results.csv
Second/OOP/Lab5/: StaticArray.h  main.cpp
Second/OOP/v1/bases/: railway_carriages.csv
Second/OOP/v1/v1/: v1.pro
(+23 files in other folders)
